app/assets/stylesheets/geoblacklight/record.css
/* Record show page styles */

/* Document header */
.documentHeader {
  h1 {
    margin-bottom: 0.5em;
    & > * {
      vertical-align: middle;
    }
  }

  .blacklight-icons {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    height: 1em;
  }
}

/* Attribute table */
[data-sidebar="false"] .attribute-data {
  margin-top: 1rem;
}

/* Metadata */
.document-metadata {
  margin-top: 1rem;
}

.blacklight-dct_description_sm p:last-of-type {
  margin-bottom: 0;
}

/* Sidebar */
.page-sidebar {
  > * + * {
    margin-top: 1rem;
  }

  .card ul {
    margin-bottom: 0;
  }

  .card-header {
    font-weight: 500;
  }
}

#relations {
  display: block;
}

.relations {
  .list-group {
    --bs-list-group-border-width: 0;
  }
}

/* Login button */
.login-btn {
  --gbl-login-btn-bg: rgba(var(--bs-body-color-rgb), 0.03);

  --bs-btn-color: var(--gbl-login-btn-color);
  --bs-btn-bg: var(--gbl-login-btn-bg);
  --bs-btn-border-color: var(--bs-border-color-translucent);
  --bs-btn-hover-color: var(--gbl-login-btn-color);
  --bs-btn-hover-bg: var(--gbl-login-btn-bg);
  --bs-btn-hover-border-color: var(--bs-border-color-translucent);
}

/* Downloads */
.download a {
  display: block;

  .title {
    margin: 0;
    display: inline;
  }

  .badge {
    float: inline-end;
    margin-top: 0.1em;
  }

  .badge + .title {
    word-break: break-all;
  }
}

